# resume-tailor

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: config.py  latex_assembler.py  latex_parser.py  main.py
backend/models/: resume.py  session.py
backend/prompts/: ats_review.txt  human_review.txt  rewrite_with_feedback.txt  section_draft.txt  self_critique.txt
backend/routers/: session.py
backend/services/: generation.py  ollama.py  session_manager.py
backend/tests/: test_latex_assembler.py  test_latex_parser.py
backend/tests/fixtures/: sample_resume.tex
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ExportModal.tsx  ReviewScreen.tsx  SectionPanel.tsx  SectionSidebar.tsx  SetupScreen.tsx  WizardScreen.tsx
frontend/src/utils/: resumeEntries.ts
